<resources>
    <string name="app_name">VynilOS</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="collectors">Collectors</string>
    <string name="no_artist">No artists found</string>
    <string name="empty_message_album">No albums available at this moment.</string>
    <string name="visitor">Visitor</string>
    <string name="try_again">Try again</string>
    <string name="no_albums_artist">The artist has no albums yet</string>
    <string name="back">Back</string>
    <string name="no_collectors">No collectors available at this moment.</string>
    <string name="description">Description</string>
    <string name="songs">Songs</string>
    <string name="genre">Genre</string>
    <string name="record_label">Record Label</string>
    <string name="album">Album</string>
    <string name="image">Image</string>
    <string name="release_date">Release Date</string>
    <string name="add_album">Add Album</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string-array name="genres">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="record_labels">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
    <string name="collector">Collector</string>
    <string name="album_added">The album was added successfully</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="required_field">Required field</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="add_track">Add Track</string>
    <string name="add_new_track">Add New Track</string>
    <string name="track_name">Track Name</string>
    <string name="track_duration">Track Duration</string>
    <string name="add">Add</string>
    <string name="no_tracks">No tracks available.</string>
    <string name="comments">Comments</string>
    <string name="add_comments">Add a comment</string>
    <string name="send">Send</string>
    <string name="select_rating">Rating</string>
    <string name="telephone">Phone</string>
    <string name="Email">Email</string>
    <string name="favoritePerformers">Favorite Performers</string>
    <string name="No_Performers_Collector">The collector has no performers</string>
    <string name="No_Album_Collector">The collector has no albums</string>
    <string name="album_image">Album Image</string>
    <string name="precio">Price</string>
    <string name="artist_image">Artist Image</string>
    <string name="see_less">See less</string>
    <string name="see_more">See more</string>
</resources>
